--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/diary_database
 spring.datasource.username=sebastian
 spring.datasource.password=octavia
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.database=postgresql
